sonarr/Manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  replicas: 1
  serviceName: sonarr
  template:
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - name: ui
          containerPort: 8989
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: sonarr-downloads
          mountPath: /downloads
  volumeClaimTemplates:
  - metadata:
      name: sonarr-config
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 256Mi
  - metadata:
      name: sonarr-downloads
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 10Gi
