sonarr/Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  clusterIP: None
  ports:
  - name: ui
    port: 8989
    targetPort: 8989
    protocol: TCP
